# UpstreamDrift

./: .coverage.DeskComputer.16896.XvrcsCEx  .coverage.DeskComputer.18176.XxXRBWWx  .coverage.DeskComputer.29652.XZpYrtUx  .coverage.DeskComputer.36904.XUCZduDx  .coverage.DeskComputer.37764.XGLdUcQx  .coverage.DeskComputer.49924.XzPtLfpx  .coverage.DeskComputer.9196.XkaOrLgx  .coverage.OGLaptop.pid403739.XNJKs7zx.HaHhr10EOs1h  .coverage.OGLaptop.pid403739.XrGJL4Kx.HNcFmuT4e26h  .coverage.OGLaptop.pid403782.XejLrvax.HkMcx2Mj4M1h  .coverage.OGLaptop.pid403782.XlWIIDlx.HO2wizuNKu4h  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ADVERSARIAL_REVIEW_REPORT.md  AGENTS.md  ARCHITECTURE_IMPROVEMENTS_PLAN.md  ASSESSMENT_SUMMARY.md  C3D_VIEWER_AND_PINOCCHIO_INTEGRATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_PROJECT_REVIEW.md  CURRENT_STATE_SUMMARY.md  DEVELOPMENT_PLAN_PHASE1.md  Dockerfile  Dockerfile.unified  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LAUNCHER_FIXES_SUMMARY.md  MIGRATION_STATUS.md  MYOSUITE_COMPLETE_SUMMARY.md  Makefile  NEXT_TASK_PHASE_4.md  OPENSIM_COMPLETE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_REPORT.md  (+117 more)
engines/physics_engines/pinocchio/: Dockerfile  PR_DESCRIPTION.md  README.md  branch_cleanup_report_20251130_230848.md  pyproject.toml
engines/physics_engines/pinocchio/docs/: Pinocchio_Project_Outline.md  VISUALIZATION_STATUS.md  WORKFLOW_PLAN.md
engines/physics_engines/pinocchio/python/: __init__.py  pinocchio_physics_engine.py  requirements-ci.txt  swing_plane_integration.py
engines/physics_engines/pinocchio/scripts/: quality_check.py  setup_gepetto_env.sh  setup_modeling_env.sh  setup_modeling_env_windows.ps1  verify_pipeline.py
engines/physics_engines/pinocchio/tools/: probe_gpcap.py
src/shared/python/: README_PACKAGE.md  __init__.py  activation_dynamics.py  aerodynamics.py  ball_flight_physics.py  base_physics_engine.py  biomechanics_data.py  capabilities.py  checkpoint.py  cli_utils.py  common_utils.py  comparative_analysis.py  comparative_plotting.py  config_utils.py  configuration_manager.py  constants.py  contracts.py  control_features_registry.py  control_interface.py  counterfactual_utils.py  cross_engine_validator.py  data_fitting.py  data_utils.py  dataset_generator.py  datetime_utils.py  draggable_tabs.py  ellipsoid_visualization.py  energy_monitor.py  engine_availability.py  engine_loaders.py  engine_manager.py  engine_probes.py  engine_registry.py  env_validator.py  environment.py  equipment.py  error_decorators.py  error_utils.py  exceptions.py  export.py  (+70 more)
src/shared/python/ai/: __init__.py  config.py  education.py  exceptions.py  glossary_data.py  glossary_data_core.py  glossary_data_extended.py  sample_tools.py  tool_registry.py  types.py  workflow_definitions.py  workflow_engine.py
src/shared/python/analysis/: __init__.py  angular_momentum.py  basic_stats.py  coordination_metrics.py  dataclasses.py  energy_metrics.py  grf_metrics.py  nonlinear_dynamics.py  pca_analysis.py  phase_detection.py  power_work_metrics.py  reporting.py  stability_metrics.py  swing_metrics.py
src/shared/python/assessment/: analysis.py  constants.py  reporting.py
src/shared/python/biomechanics/: __init__.py  activation_dynamics.py  hill_muscle.py  kinematic_sequence.py  multi_muscle.py  muscle_analysis.py  muscle_equilibrium.py  myoconverter_integration.py  myosuite_adapter.py  swing_comparison.py  swing_plane_analysis.py  swing_plane_visualization.py
src/shared/python/club_data/: __init__.py  club_data_tab.py  display.py  loader.py  targets.py
src/shared/python/config/: __init__.py  config_utils.py  configuration_manager.py  environment.py  handedness_support.py  model_registry.py  standard_models.py
src/shared/python/core/: __init__.py  _core.py  constants.py  contracts.py  datetime_utils.py  error_decorators.py  error_utils.py  exceptions.py  numerical_constants.py  type_utils.py  version.py
src/shared/python/dashboard/: advanced_analysis.py  launcher.py  recorder.py  runner.py  widgets.py  window.py
src/shared/python/data_io/: __init__.py  common_utils.py  data_utils.py  dataset_generator.py  export.py  import_utils.py  io_utils.py  marker_mapping.py  output_manager.py  path_utils.py  provenance.py  reproducibility.py  swing_capture_import.py
src/shared/python/engine_core/: __init__.py  base_physics_engine.py  checkpoint.py  cross_engine_validator.py  engine_availability.py  engine_loaders.py  engine_manager.py  engine_probes.py  engine_registry.py  interfaces.py  mock_engine.py  plugin_registry.py  sub_protocols.py  unified_engine_interface.py  workflow_adapter.py
src/shared/python/gui_pkg/: __init__.py  draggable_tabs.py  ellipsoid_visualization.py  gui_utils.py  help_system.py  image_utils.py  launcher_utils.py  plot_generator.py  plotting_utils.py  video_pose_pipeline.py  viewpoint_controls.py
src/shared/python/injury/: injury_risk.py  joint_stress.py  spinal_load_analysis.py  swing_modifications.py
src/shared/python/logging_pkg/: __init__.py  logger_utils.py  logging_config.py
src/shared/python/optimization/: __init__.py  swing_bridge.py  swing_optimizer.py
src/shared/python/physics/: __init__.py  aerodynamics.py  ball_flight_physics.py  energy_monitor.py  equipment.py  flexible_shaft.py  flight_model_options.py  flight_models.py  grip_contact_model.py  ground_reaction_forces.py  impact_model.py  physics_parameters.py  terrain.py  terrain_engine.py  terrain_mixin.py  topography.py
src/shared/python/plotting/: __init__.py  animation.py  base.py  config.py  core.py  energy.py  export.py  kinematics.py  transforms.py
src/shared/python/pose_editor/: __init__.py  core.py  library.py  widgets.py
src/shared/python/pose_estimation/: interface.py  joint_angle_utils.py  mediapipe_estimator.py  mediapipe_gui.py  openpose_estimator.py  openpose_gui.py  validation_metrics.py
src/shared/python/security/: __init__.py  (+4 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+4239 files in other folders)
