[project]
name = "golf-suite"
version = "2.0.0"
description = "Biomechanical golf simulation and analysis suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["golf", "biomechanics", "simulation", "physics", "mujoco"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core (always installed)
    "numpy>=1.26.4,<3.0.0",
    "scipy>=1.13.1",
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",

    # Default physics engine (lightweight, cross-platform)
    "mujoco>=3.3.0,<4.0.0",
]

[project.optional-dependencies]
# Additional physics engines
drake = ["drake>=1.22.0"]
pinocchio = ["pin>=2.6.0", "meshcat>=0.3.0"]
all-engines = ["golf-suite[drake,pinocchio]"]

# Analysis extras
analysis = ["opencv-python>=4.8.0", "scikit-learn>=1.3.0"]

# Development
dev = ["pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.8.0", "build"]

# Everything
all = ["golf-suite[all-engines,analysis,dev]"]

[project.scripts]
golf-suite = "launch_golf_suite:main"

[project.urls]
Homepage = "https://github.com/D-sorganization/Golf_Modeling_Suite"
Documentation = "https://golf-suite.readthedocs.io"
Repository = "https://github.com/D-sorganization/Golf_Modeling_Suite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include pre-built UI in the wheel
include = [
    "src/**/*",
    "ui/dist/**/*",  # Bundled web UI (built by build_hooks.py)
    "launch_golf_suite.py",
]

[tool.hatch.build.hooks.custom]
# Build UI before packaging
path = "build_hooks.py"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
