[project]
name = "upstream-drift"
version = "2.1.0"
description = "Biomechanical golf simulation and analysis suite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["golf", "biomechanics", "simulation", "physics", "mujoco", "urdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core (always installed)
    "numpy>=1.26.4,<3.0.0",
    "scipy>=1.13.1",
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",

    # Default physics engine (lightweight, cross-platform)
    "mujoco>=3.3.0,<4.0.0",

    # Safe expression evaluation (replaces eval())
    "simpleeval>=1.0.0",

    # Shared tools (URDF generation, signal processing)
    # Install from local path: pip install -e ../Tools[urdf]
    # Or from GitHub: pip install git+https://github.com/D-sorganization/Tools.git[urdf]
]

[project.optional-dependencies]
# Additional physics engines
drake = ["drake>=1.22.0"]
pinocchio = ["pin>=2.6.0", "meshcat>=0.3.0"]
all-engines = ["upstream-drift[drake,pinocchio]"]

# Analysis extras
analysis = ["opencv-python>=4.8.0", "scikit-learn>=1.3.0"]

# URDF generation tools (from shared Tools repo)
urdf = ["trimesh>=4.0.0", "PyYAML>=6.0", "defusedxml>=0.7.0"]

# Development
dev = ["pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.8.0", "build"]

# Everything
all = ["upstream-drift[all-engines,analysis,urdf,dev]"]

[project.scripts]
upstream-drift = "launch_golf_suite:main"

[project.urls]
Homepage = "https://github.com/D-sorganization/UpstreamDrift"
Documentation = "https://upstream-drift.readthedocs.io"
Repository = "https://github.com/D-sorganization/UpstreamDrift"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include pre-built UI in the wheel
include = [
    "src/**/*",
    "ui/dist/**/*",  # Bundled web UI (built by build_hooks.py)
    "launch_golf_suite.py",
]

[tool.hatch.build.hooks.custom]
# Build UI before packaging
path = "build_hooks.py"

[tool.ruff]
line-length = 88
target-version = "py311"
# Exclude third-party model files (legacy Python 2 scripts from OpenSim)
exclude = [
    "src/shared/models/opensim/opensim-models/**",
    "shared/models/opensim/opensim-models/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 88
target-version = ["py311"]
# Exclude third-party model files (legacy Python 2 scripts from OpenSim)
exclude = '''
/(
    src/shared/models/opensim/opensim-models
  | shared/models/opensim/opensim-models
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
# Exclude directories with invalid Python package names, third-party models,
# and modules pending type annotation improvements (tracked for future cleanup)
exclude = [
    "src/engines/Simscape_Multibody_Models/2D_Golf_Model",
    "src/engines/Simscape_Multibody_Models/3D_Golf_Model",
    "src/shared/models/opensim/opensim-models",
    # Pending type annotation cleanup (consolidated PR 2026-01-31)
    "src/shared/python/signal_toolkit/",
    "src/shared/python/plotting/",
    "src/shared/python/tests/",
    "src/shared/python/ui/qt/widgets/",
    "src/shared/python/dashboard/tests/",
    "src/engines/physics_engines/pinocchio/python/motion_training/",
    "src/engines/physics_engines/mujoco/python/mujoco_humanoid_golf/",
    "src/api/",
    "src/launchers/",
    "src/engines/common/",
    "src/shared/python/checkpoint.py",
    "src/shared/python/base_physics_engine.py",
    # Additional files with numpy/dict typing issues (pre-existing)
    "src/shared/python/impact_model.py",
    "src/shared/python/flexible_shaft.py",
    "src/shared/python/pose_editor/",
    "src/shared/python/ai/gui/",
    "src/engines/physics_engines/pinocchio/python/pinocchio_golf/pose_editor_tab.py",
    "src/engines/physics_engines/drake/python/src/pose_editor_tab.py",
    "src/shared/python/pose_estimation/",
    "src/shared/python/ui/adapters/",
    "src/shared/python/ui/",
]

# Mypy overrides for modules with pre-existing type issues
[[tool.mypy.overrides]]
module = [
    "src.shared.python.signal_toolkit.*",
    "src.shared.python.plotting.*",
    "src.shared.python.ui.*",
    "src.shared.python.spatial_algebra.*",
    "src.engines.physics_engines.mujoco.python.mujoco_humanoid_golf.*",
]
ignore_errors = true

[tool.pytest.ini_options]
# Consolidated pytest configuration (replaces duplicate pytest.ini files)
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gl: Tests needing OpenGL/moderngl or a display",
    "slow_numba: Tests that require numba JIT or are heavy",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
