[package]
name = "golf-modeling-suite"
version = "2.1.0"
description = "Golf Modeling Suite - Biomechanical Golf Simulation"
authors = ["D-sorganization"]
license = "MIT"
repository = "https://github.com/D-sorganization/UpstreamDrift"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "golf_modeling_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
