[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinocchio_golf_model"
version = "0.1.0"
description = "Unified golf biomechanics platform using Pinocchio, MuJoCo, and PINK"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "mujoco>=3.0.0",
    "meshcat>=0.3.2",
    "qpsolvers>=4.0.0",
    "PySide6>=6.6.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=python"
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]
namespaces = false
